# file-explorer

./: CMakeLists.txt  CMakeUserPresets.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propertiesdialog.cpp  propertiesdialog.h  searchwindow.cpp  searchwindow.h
